assets/sass/local-group.scss
/* ... */
@media all and (min-width: 100em) {
    body {
        max-width: none;
        margin: 0;
    }
    .u-lContent {
        padding-right: 6%;
    }
    .u-pageHome .u-Search {
        right: 28%
    }
    .u-Masthead {
        width: 22%;
    }
    .galleria--homepage {
        width: 78%;
    }
    .u-lMain {
        margin-left: 22%;
        width: 78%;
    }
    .u-lFooter {
        margin: 0 0 0 22%;
    }
    .u-NavSite {
        width: 22%;
    }
    .u-Search {
        width: 19.85%;
    }
}
/* ==============================
 *	COLOR
 * ==============================
 */
a,
.Module__link,
.u-lAside a {
    text-decoration: none;
    border-bottom: 1px solid $linkBorderColor;
    padding-bottom: 0;
}
a:visited {
    border-bottom: 1px solid $linkColorVisited;
}
a:hover,
a:focus {
    border-bottom: 1px solid $linkColorHoverFocus;
}
a:active {
    border-bottom: 1px solid $linkColorActive;
}
.u-Search__cancel:link,
.u-Figure a:link,
h1 a:link, h2 a:link, h3 a:link, h4 a:link, h5 a:link, h6 a:link,
.Module__headerLink:link,
.Module__link:link,
.Module--sidebar a:link,
.moreLink:link,
a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url,
a.fn.org.url.u-VCard__fn.u-VCard__item.u-VCard__org.u-VCard__url:link,
.icon-close:link,
.u-Search__button:link,
.ac-NavAnchor--menu:link,
.u-NavSite__item:link,
.u-Masthead__siteName--link:link,
.u-Masthead__vassar--link:link,
.u-ArticleNavGroup__navButton:link,
.u-ArticleListItem__link:link {
    border-bottom: none;
}
.u-lHeader {
    background-color: $linkColor;
}
.u-Masthead__siteName--line1 {
    background-color: white;
    border: 10px $linkColor double;
}
.u-NavSite__level--1 {
    /* border-top: 1px solid #9AAE88; */
}
h1, h2, h3, h4, h5, h6,
.Module__header {
    color: $fontColor;
}
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    @include link-colors($linkColor, $linkColorHoverFocus, $linkColorActive, $linkColor, $linkColorHoverFocus);
}
.u-pageTitle {
    color: $linkColor;
}
.u-Masthead__siteName--link {
    @include link-colors($linkColor, $linkColorHoverFocus, $linkColorActive, $linkColor, $linkColorHoverFocus);
}
.u-Search__field {
    border: 8px solid $linkColor;
}
#navigation .u-NavSite__item--isCurrent,
.u-NavSite__item--isCurrent,
 {
    @include link-colors($linkColorHoverFocus, $linkColorHoverFocus, $linkColorActive, $linkColorHoverFocus, $linkColorHoverFocus);
}
.galleria-info-description {
    color: $lightBg !important;
}
.galleria-info-text {
    background-color: #000 !important;
    background:transparent !important;
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#50000000,endColorstr=#50000000) !important;
    zoom: 1 !important;
    background-color: rgba(0, 0, 0, 0.4) !important;
}
@media screen and (min-width: $small) {
    .u-lHeader {
        background-color: transparent;
    }
    .u-Search__field {
        border: 1px solid $linkColor;
    }
    .u-Masthead:before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        border-right: 1px solid #9AAE88;
        background-color: #799361;
        z-index: 1;
    }
    .u-Masthead__siteName {
        background: transparent url(/assets/images/css/envirocoop-acorn.png) no-repeat center 5%;
        background-size: 2.5em;
    }
    .u-lFooter {
        background: transparent url(/assets/images/css/envirocoop-logo.png) no-repeat center center;
        background-size: 80%;
    }
    .icon-search svg {
        background-color: $linkColor;
    }
}
@media screen and (min-width: $large) {
    .u-lAside {
        border-left: 1px solid #DBE4D3;
    }
}
@media screen and (min-width: $medium) {
    .u-Masthead:before {
        right: 69%;
    }
}
@media all and (min-width: 68.75em) {
    .u-Masthead:before {
        right: 72%;
    }
}
@media screen and (min-width: 100em) {
    .u-Masthead:before {
        right: 78%;
    }
}

